# products-api

./: .codecov.yml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  TESTING_GUIDE.md  TEST_ORGANIZATION.md  VAULT_GUIDE.md  WARNINGS_ANALYSIS.md  WORKERS_GUIDE.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  vault.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml
src/: exceptions.py  logger.py  main.py  migrations.py  schemas.py  vault.py
src/alembic/: env.py
src/config/: settings.py
src/core/: __init__.py  middleware.py  security.py
src/database/: __init__.py
src/exceptions/: enums.py  exceptions.py
src/models/: __init__.py
src/routers/: __init__.py  auth.py  items.py  users.py
src/schemas/: __init__.py
src/security/: __init__.py  security.py
src/tasks/: __init__.py  worker.py
src/utils/: __init__.py
tests/: README.md  conftest.py  test_auth.py  test_critical_path.py  test_items.py  test_main.py  test_vault.py
tests/fixtures/: fixtures.py
tests/integration/: __init__.py  test_api.py  test_api_basic.py  test_auth.py  test_client_setup.py  test_workers.py
tests/integration/database/: test_db_setup.py
tests/integration/routers/: test_auth.py  test_client_setup.py  test_items.py  test_users.py
tests/integration/tasks/: test_workers_exec.py
tests/unit/: test_logger.py  test_main.py  test_migrations.py  test_schemas.py  test_security.py  test_utils.py  test_vault.py
tests/unit/alembic/: test_env.py
tests/unit/config/: test_critical_path.py  test_settings.py
tests/unit/core/: test_middleware.py  test_security.py
tests/unit/schemas/: test_schemas.py
tests/unit/security/: test_security.py
tests/unit/tasks/: test_workers.py
