[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CRUD API"
dynamic = ["version"]
description = "A secure CRUD API with JWT authentication"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "twatis", email = "twatis@antics.com"}
]
keywords = ["fastapi", "sqlalchemy", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt<5.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "email-validator==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.1",
    "httpx==0.25.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-project"
Documentation = "https://github.com/yourusername/python-project/blob/main/README.md"
Repository = "https://github.com/yourusername/python-project.git"
Issues = "https://github.com/yourusername/python-project/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {file = ["version.txt"]}

[pytest]
pythonpath = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'


[tool.ruff]
line-length = 88
target-version = "py311"

lint.per-file-ignores = { "tests/conftest.py" = ["E402"] }

# Enable Ruff rules (compatible with Flake8, isort, etc.)
lint.select = ["E", "W", "F", "I"]

# Don't fight with Black formatting
lint.ignore = ["E203"]
# Ruff autofix on save (VS Code handles this)
fix = true

# Directories to skip
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".eggs",
    ".mypy_cache",
    ".tox",
    ".hg"
]
