[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crud_api_with_jwt_authentication"
dynamic = ["version"]
description = "A secure CRUD API with JWT authentication"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "twatis", email = "twatis@antics.com"}
]
keywords = ["fastapi", "sqlalchemy", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-project"
Documentation = "https://github.com/yourusername/python-project/blob/main/README.md"
Repository = "https://github.com/yourusername/python-project.git"
Issues = "https://github.com/yourusername/python-project/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {file = ["version.txt"]}

[pytest]
pythonpath = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
ignore_errors = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
title = "Coverage Report - Products API"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["src/schemas/__init__.py"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

lint.per-file-ignores = { "tests/conftest.py" = ["E402"] }

# Enable Ruff rules (compatible with Flake8, isort, etc.)
lint.select = ["E", "W", "F", "I"]

# Don't fight with Black formatting
lint.ignore = ["E203"]
# Ruff autofix on save (VS Code handles this)
fix = true

# Directories to skip
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".eggs",
    ".mypy_cache",
    ".tox",
    ".hg"
]
