[project]
name = "crud_api_with_jwt_authentication"

dynamic = ["version"]
description = "A secure CRUD API with JWT authentication"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "twatis", email = "twatis@antics.com"}
]
keywords = ["fastapi", "sqlalchemy", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.23",
    "alembic>=1.13.1",
    "pydantic==2.7.0",
    "pydantic_settings==2.2.0",
    "pydantic[email]==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "bcrypt>=4.0.0,<5.0.0",
    "python-json-logger",
    "slowapi==0.1.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "version.txt"
pattern = '^(?P<version>[^\s#]+)'

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff==0.14.7",
    "pytest==8.0",
    "pytest-asyncio==0.21.1",
    "pytest-xdist[psutil]==3.5.0",
    "httpx==0.27.0",
    "coverage[toml]==7.6",
    "mypy==1.10",
    "pip-audit==2.7",
    "tomli==2.3.0",
    "pre-commit==4.5.0",
    "bandit==1.8.0",
    "detect-secrets",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-project"
Documentation = "https://github.com/yourusername/python-project/blob/main/README.md"
Repository = "https://github.com/yourusername/python-project.git"
Issues = "https://github.com/yourusername/python-project/issues"

[pytest]
pythonpath = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
ignore_errors = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
title = "Coverage Report - Products API"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["src/schemas/__init__.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".eggs",
    ".mypy_cache",
    ".tox",
    ".hg",
]

[tool.ruff.lint]
per-file-ignores = { "tests/conftest.py" = ["E402"] }
select = ["E", "W", "F", "I"]

[tool.bandit]
skips = ["B101", "B404", "B603"]
exclude_dirs = ["tests"]
exclude = ["src/exceptions/enums.py", "exceptions/enums.py"]
